crates/solidity/testing/snapshots/bindings_output/mappings/named_params_in_variables/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected EqualGreaterThan or PayableKeyword.
   ╭─[ input.sol:2:21 ]
   │
 2 │     mapping(address owner => mapping(uint256 index => uint256)) private _ownedTokens;
   │                     ─────────────────────┬────────────────────  
   │                                          ╰────────────────────── Error occurred here.
───╯
Error: Expected EqualGreaterThan.
   ╭─[ input.sol:5:25 ]
   │
 5 │         mapping(uint256 index => uint256) storage _ownedTokensByOwner = _ownedTokens[from];
   │                         ────────┬───────  
   │                                 ╰───────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     mapping(address owner => mapping(uint256 index => uint256)) private _ownedTokens;
   │                                                                         ──────┬─────  
   │                                                                               ╰─────── name: 2
   │ 
 4 │     function test(address from) public {
   │              ──┬─         ──┬─  
   │                ╰──────────────── name: 3
   │                             │   
   │                             ╰─── name: 4
 5 │         mapping(uint256 index => uint256) storage _ownedTokensByOwner = _ownedTokens[from];
   │                                                   ─────────┬─────────   ──────┬───── ──┬─  
   │                                                            ╰─────────────────────────────── name: 5
   │                                                                               │        │   
   │                                                                               ╰──────────── ref: 2
   │                                                                                        │   
   │                                                                                        ╰─── ref: 4
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ ╭─▶ contract Test {
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ input.sol:1:1 ]
   │
 2 │ │       mapping(address owner => mapping(uint256 index => uint256)) private _ownedTokens;
   │ │   ───────────────────────────────────────────┬──────────────────────────────────────────  
   │ │                                              ╰──────────────────────────────────────────── definiens: 2
 3 │ ╭─▶ 
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── definiens: 3
   │
   ├─[ input.sol:1:1 ]
   │
 4 │     function test(address from) public {
   │                   ──────┬─────  
   │                         ╰─────── definiens: 4
 5 │         mapping(uint256 index => uint256) storage _ownedTokensByOwner = _ownedTokens[from];
   │ ──────────────────────────────────────────────┬─────────────────────────────────────────────  
   │                                               ╰─────────────────────────────────────────────── definiens: 5
───╯
